[project]
name = "zomboid-saver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyqt6>=6.6.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pytest>=8.3",
    "pytest-cov>=5.0",
]

[project.optional-dependencies]
build = [
    "nuitka>=2.4",
]

